{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 91,
  "lineage": "11e326da-30c9-9533-bf05-73bc1ac8630c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_zmahmood_webserver_app_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0ceaba14df3698617",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ceaba14df3698617",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_zmahmood",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eff7fef58dd4ae0a",
            "private_dns": "ip-10-201-1-78.eu-west-1.compute.internal",
            "private_ip": "10.201.1.78",
            "public_ip": "34.250.174.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0662f15cc6b9a5abb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6ccc695dcaf841d",
            "tags": {
              "Name": "devops106_terraform_zmahmood_app_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_zmahmood_app_webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6414d8e039c5a66"
            ]
          },
          "dependencies": [
            "aws_instance.devops106_terraform_zmahmood_webserver_db_tf",
            "aws_security_group.devops106_terraform_zmahmood_sg_app_webserver_tf",
            "aws_security_group.devops106_terraform_zmahmood_sg_db_webserver_tf",
            "aws_subnet.devops106_zmahmood_terraform_subnet_app_webserver_tf",
            "aws_subnet.devops106_zmahmood_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_zmahmood_webserver_db_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-00c660cac422df099",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c660cac422df099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_zmahmood",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6aab169712df699",
            "private_dns": "ip-10-201-2-200.eu-west-1.compute.internal",
            "private_ip": "10.201.2.200",
            "public_ip": "3.250.185.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063adb730583c01cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083df8633fd2a765d",
            "tags": {
              "Name": "devops106_terraform_zmahmood_db_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_zmahmood_db_webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036555e8342671683"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_zmahmood_sg_db_webserver_tf",
            "aws_subnet.devops106_zmahmood_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops106_zmahmood_terraform_ig_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-018fb02e17b24d19c",
            "id": "igw-018fb02e17b24d19c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_zmahmood_terraform_ig"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_ig"
            },
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "dependencies": [
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_zmahmood_terraform_nacl_app_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0ad0848fdaee030e4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0ad0848fdaee030e4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-0c6ccc695dcaf841d"
            ],
            "tags": {
              "Name": "devops106_zmahmood_terraform_nacl_app_public"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_nacl_app_public"
            },
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_zmahmood_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_zmahmood_terraform_nacl_public_db_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0aec78342c7928518",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0aec78342c7928518",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-083df8633fd2a765d"
            ],
            "tags": {
              "Name": "devops106_zmahmood_terraform_nacl_db_public"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_nacl_db_public"
            },
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_zmahmood_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops106_zmahmood_terraform_rt_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0661d98c63dc7e2e8",
            "id": "rtb-0661d98c63dc7e2e8",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018fb02e17b24d19c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops106_zmahmood_terraform_rt_public"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops106_zmahmood_terraform_ig_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_zmahmood_terraform_rt_assoc_app_public_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d46c9400f3d4345",
            "route_table_id": "rtb-0661d98c63dc7e2e8",
            "subnet_id": "subnet-0c6ccc695dcaf841d"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_zmahmood_terraform_ig_tf",
            "aws_route_table.devops106_zmahmood_terraform_rt_public_tf",
            "aws_subnet.devops106_zmahmood_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_zmahmood_terraform_rt_assoc_db_public_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0a54b897f04cde",
            "route_table_id": "rtb-0661d98c63dc7e2e8",
            "subnet_id": "subnet-083df8633fd2a765d"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_zmahmood_terraform_ig_tf",
            "aws_route_table.devops106_zmahmood_terraform_rt_public_tf",
            "aws_subnet.devops106_zmahmood_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_zmahmood_sg_app_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0d6414d8e039c5a66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6414d8e039c5a66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops106_terraform_zmahmood_app_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops106_zmahmood_terraform_sg_app_webserver"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_sg_app_webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_zmahmood_sg_db_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-036555e8342671683",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036555e8342671683",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "devops106_terraform_zmahmood__db_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops106_terraform_zmahmood_sg_db_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_zmahmood_sg_db_webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_zmahmood_terraform_subnet_app_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0c6ccc695dcaf841d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.201.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ccc695dcaf841d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_zmahmood_app_subnet"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_app_subnet"
            },
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "dependencies": [
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_zmahmood_terraform_subnet_db_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-083df8633fd2a765d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.201.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083df8633fd2a765d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_zmahmood_db_subnet"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_db_subnet"
            },
            "vpc_id": "vpc-082547fb3f0fda363"
          },
          "dependencies": [
            "aws_vpc.devops106_zmahmood_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops106_zmahmood_terraform_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-082547fb3f0fda363",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.201.0.0/16",
            "default_network_acl_id": "acl-0aa9bd3fdbeef33ee",
            "default_route_table_id": "rtb-0bb04077820cd543f",
            "default_security_group_id": "sg-0eaaa29368f0ac119",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-082547fb3f0fda363",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb04077820cd543f",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_zmahmood_terraform_vpc"
            },
            "tags_all": {
              "Name": "devops106_zmahmood_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}